# Controller

./: CMakeLists.txt  LICENSE  README.md
Tests/: CMakeLists.txt  tst_electrical.cpp  tst_events.cpp  tst_file_system.cpp  tst_foo.cpp  tst_serial_comm.cpp  tst_status.cpp
build-weapon-system-support-software-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: codemodel-v2-afe7f30eb12455fc3f37.json  index-2024-04-02T16-36-36-0944.json  target-WSSS-Debug-3e872ef78aaa7048be42.json
build-weapon-system-support-software-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: index-2024-04-02T16-32-06-0180.json
build-weapon-system-support-software-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QInputDialog.BAC35A889C700622.idx  QMessageBox.0E71A86A948F0427.idx  QShortcut.88F8CD345E702AD8.idx  QTextCursor.7F53BDE848717DAF.idx  qinputdialog.h.CE39E0E22EB3E3DB.idx  qlineedit.h.629B6FFB4F673AB9.idx  qmessagebox.h.C68E45ED77E3358D.idx  qshortcut.h.CF89DA45C288FEEA.idx
codebase/weapon-system-support-software/: Weapon System Support Software.rc  Weapon System Support Software.vcxproj.filters
codebase/weapon-system-support-software/DevelopmentEnvioronment/: CSim.cpp  Classes.hpp  ComUtility.h  DataDisplay.cpp
project-docs/Codebase/: Weapon System Support Software.sln
project-docs/Codebase/Weapon System Support Software/: Resource.h  Weapon System Support Software.cpp  Weapon System Support Software.vcxproj
weapon-system-support-software/: CMakeLists.txt  CMakeLists.txt.user.52f584c  connection.cpp  connection.h  constants.h  csim.cpp  csim.h  electrical.cpp  electrical.h  events.cpp  events.h  feedposition.cpp  feedposition.h  firemode.cpp  firemode.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_connection_settings.cpp  mainwindow_gui_slots.cpp  resources.qrc  status.cpp  status.h  weapon-system-support-software.sln
weapon-system-support-software/weapon-system-support-software/: CSim.cpp  CSim_Utilities.cpp  CSim_Utilities.h  CSim_Utilities.hpp  Classes.h  Classes.hpp  DataDisplay.cpp  MainForm.h  MyForm.cpp  MyForm.h  SerialCom.cpp  SerialCom.h  weapon-system-support-software.vcxproj  weapon-system-support-software.vcxproj.filters
weapon-system-support-software/weapon-system-support-software/QT-prototype/: CMakeLists.txt  connection.cpp  connection.h  constants.h  csim.cpp  csim.h  events.cpp  events.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  status.cpp
weapon-system-support-software/weapon-system-support-software/x64/Debug/: weapon-system-support-software.assets.cache  weapon-system-support-software.vcxproj.AssemblyReference.cache
